[package]
name = "utils"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
chrono = "0.4.42"
log = "0.4.28"
serde = "1.0.228"
solana-sdk = "3.0.0"
ta = "0.5.0"
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
spl-associated-token-account = "8.0.0"
anyhow = "1.0.100"
tokio = "1.48.0"
solana-client = "3.0.8"
serde_json = "1.0.145"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
